--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.liquibase:liquibase-core'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.28'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.8'
 
     runtimeOnly 'org.postgresql:postgresql'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
@@ -55,7 +59,7 @@ openApiGenerate {
     inputSpec = "$rootDir/src/main/resources/openapi.yaml"
     outputDir = layout.buildDirectory.dir("generated").get().asFile.toString()
     apiPackage = "com.fatihbozik.aviationroutefinder.rest.api"
-    modelPackage = "com.fatihbozik.aviationroutefinder.rest.dto"
+    modelPackage = "com.fatihbozik.aviationroutefinder.rest.model"
 
     configOptions = [
             dateLibrary          : "java8",
