--- a/build.gradle
+++ b/build.gradle
@@ -1,82 +1,2 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.4.4'
-    id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.openapi.generator' version '7.12.0'
-}
-
-group = 'com.fatihbozik'
-version = '0.0.1-SNAPSHOT'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.liquibase:liquibase-core'
-    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.28'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
-    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.8'
-
-    runtimeOnly 'org.postgresql:postgresql'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.mapstruct:mapstruct:1.6.3'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-openApiGenerate {
-    generatorName = "spring"
-    inputSpec = "$rootDir/src/main/resources/openapi.yaml"
-    outputDir = layout.buildDirectory.dir("generated").get().asFile.toString()
-    apiPackage = "com.fatihbozik.aviationroutefinder.rest.api"
-    modelPackage = "com.fatihbozik.aviationroutefinder.rest.model"
-
-    configOptions = [
-            dateLibrary          : "java8",
-            performBeanValidation: "true",
-            interfaceOnly        : "true",
-            useTags              : "true",
-            useSpringBoot3       : "true"
-    ]
-}
-
-sourceSets {
-    main {
-        java {
-            srcDir "$buildDir/generated/src/main/java"
-        }
-    }
-}
-
-compileJava.dependsOn tasks.openApiGenerate
-
+group 'com.fatihbozik'
+version '1.0.0'
