--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'aviation-route-finder'
+
+include ':backend'
+project(':backend').name = 'backend'
+
+include ':frontend'
+project(':frontend').name = 'frontend'
