--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,8 +24,15 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    all*.exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation("org.springframework.boot:spring-boot-starter-undertow") {
+        exclude group: "io.undertow", module: "undertow-websockets-jsr"
+    }
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -62,11 +69,12 @@ openApiGenerate {
     modelPackage = "com.fatihbozik.aviationroutefinder.rest.model"
 
     configOptions = [
-            dateLibrary          : "java8",
-            performBeanValidation: "true",
-            interfaceOnly        : "true",
-            useTags              : "true",
-            useSpringBoot3       : "true"
+            dateLibrary            : "java8",
+            performBeanValidation  : "true",
+            interfaceOnly          : "true",
+            useTags                : "true",
+            useSpringBoot3         : "true",
+            "documentationProvider": "springdoc"
     ]
 }
 
