Implement Redis caching for locations and transportations, add Redis configuration, and update docker-compose for Redis service

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -25,6 +25,12 @@ spring:
         command: down
         timeout: 10s
       file: docker-compose.yml
+  cache:
+    type: redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 springdoc:
   api-docs:
