--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     }
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.liquibase:liquibase-core'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
