Add README documentation and update RouteSearch layout for better UI alignment

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       stop:
         command: down
         timeout: 10s
-      file: docker-compose.yml
+      file: docker-compose.dev.yml
   cache:
     type: redis
   data:
